Lists description list is added

--- a/index.html
+++ b/index.html
@@ -25,5 +25,10 @@
             <li>Image</li>
             <li>lists(ul , ol)</li>
         </ol>
+
+        <dl>
+            <dt>Html</dt>
+            <dd>Html is a Hyper Text Markup Languauge and it is used to create static web pages</dd>
+        </dl>
     </body>
 </html>
